some fixes
- fixes on profile edit modal and venue edit page
- UI fixes on RequestPage
- fixes on the diescriptions not showing white spaces while being displayed on the requests

--- a/src/App.css
+++ b/src/App.css
@@ -247,7 +247,7 @@ ion-thumbnail {
 
 .card-title {
   font-size: 18px;
-  color: var(--secondary-color);
+  color: var(--ion-color-primary);
 }
 
 .card-label {
